// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fd Event should render event type correctly 1`] = `
<span
  className="fdEvent"
>
  <span
    className="eventType"
  >
    click
     
  </span>
  <span
    className="eventTarget"
  >
    h:
    document.body
     
  </span>
</span>
`;

exports[`Fd Event should render event type with value correctly 1`] = `
<span
  className="fdEvent"
>
  <span
    className="eventType"
  >
    contains-text
     
  </span>
  <span
    className="event-value"
  >
    contains this text
     
  </span>
  <span
    className="eventTarget"
  >
    h:
    document.body
     
  </span>
</span>
`;
